--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="https://d30y9cdsu7xlg0.cloudfront.net/png/155189-200.png">
     <link href="https://fonts.googleapis.com/css?family=Megrim" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Marvel" rel="stylesheet">
 
